nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-notes-ingress
  namespace: nginx
  annotations:
    # 1. Update the rewrite target to use the captured regex group ($2)
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      # 2. Add regex matching to the path to isolate '/nginx' and any trailing paths
      - pathType: ImplementationSpecific
        path: /nginx(/|$)(.*)
        backend:
          service:
            name: ser
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-app
            port:
              number: 8000
